--- a/index.html
+++ b/index.html
@@ -4,9 +4,91 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web-Studio-(Version-2.1)</title>
 </head>
 <body>
+    <header>
+        <a href="#">WebStudio</a>  
+        <nav> 
+            <ul>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
+            </ul>
+        </nav>
+        <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+        <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+        <hr>
+    </header>
+
+    <main>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+        <ul>
+            <li>
+                <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </li>
+            <li>
+                <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </li>
+            <li>
+                <h2>ПЛАНУВАННЯ</h2>
+                Так само консультація з широким активом значною мірою зумовлює.
+            </li>
+            <li>
+                <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </li>
+        </ul>
+        
+        <figure>
+            <figcaption><h2>Чим ми займаємося</h2></figcaption>
+            <img src="images/box1.jpg" alt="Кодируем при помощи планшета с беспроводной клавиатурой" width="370" height="294">
+            <img src="images/box2.jpg" alt="Выполняем WEB-разработку для мобильных устройств" width="370" height="294">
+            <img src="images/box3.jpg" alt="Подбираем палитру цветов при помощи планшета" width="370" height="294">
+        </figure>
+
+        <figure>
+            <figcaption><p>Наша команда</p></figcaption>
+            <ul>
+                <li>
+                    <img src="images/designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                    <p>Ігор Дем'яненко</p>
+                    <h6>Product Designer</h6>
+                </li>
+
+                <li>
+                    <img src="images/frontend.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                    <p>Ольга Рєпіна</p>
+                    <h6>Frontend Developer</h6>
+                </li>
+
+                <li>
+                    <img src="images/marketing.jpg" alt="Микола Тарасов" width="270" height="260">
+                    <p>Микола Тарасов</p>
+                    <h6>Marketing</h6>
+                </li>
+
+                <li>
+                    <img src="images/ui-designer.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                    <p>Михайло Єрмаков</p>
+                    <h6>UI Designer</h6>
+                </li>
+            </ul>
+        </figure>
+    </main>
+
+    <footer>
+        <a href="#">WebStudio</a> <br>
+        <adress>
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+        </adress>
+        </ul>
+    </footer>
     
 </body>
 </html>
