--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
-        
-        <hr>
     </header>
 
     <main>
@@ -50,9 +48,9 @@
         
         <figure>
             <figcaption><h2>Чим ми займаємося</h2></figcaption>
-            <img src="./images/box1.jpg" alt="Кодируем при помощи планшета с беспроводной клавиатурой" width="370" height="294">
-            <img src="./images/box2.jpg" alt="Выполняем WEB-разработку для мобильных устройств" width="370" height="294">
-            <img src="./images/box3.jpg" alt="Подбираем палитру цветов при помощи планшета" width="370" height="294">
+            <img src="./images/box1.jpg" alt="Кодування за макетом" width="370" height="294">
+            <img src="./images/box2.jpg" alt="Адаптивна WEB-розробка" width="370" height="294">
+            <img src="./images/box3.jpg" alt="Вибір кольору на планшеті" width="370" height="294">
         </figure>
 
         <figure>
