--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p><a href="#">WebStudio</a></p>  
+        <p><a href="#">WebStudio</a></p>
         <nav> 
             <ul>
                 <li><a href="#">Студія</a></li>
@@ -84,13 +84,14 @@
     </main>
 
     <footer>
-        <p><a href="#">WebStudio</a></p>
-        <adress>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
-        </adress>
-        </ul>
+        <a href="#">WebStudio</a>
+        <section>
+            <adress>
+                <p>м. Київ, пр-т Лесі Українки, 26</p>
+                <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+                <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+            </adress>
+        </section>
     </footer>
 </body>
 </html>
