--- a/index.html
+++ b/index.html
@@ -1,97 +1,96 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web-Studio-(Version-2.1)</title>
-</head>
-<body>
-    <header>
-        <p><a href="#">WebStudio</a></p>
-        <nav> 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Web-Studio-(Version-2.1)</title>
+    </head>
+    <body>
+        <header>
+            <a href="#"><span>Web</span>Studio</a>
+            <nav> 
+                <ul>
+                    <li><a href="#">Студія</a></li>
+                    <li><a href="#">Портфоліо</a></li>
+                    <li><a href="#">Контакти</a></li>
+                </ul>
+            </nav>
             <ul>
-                <li><a href="#">Студія</a></li>
-                <li><a href="#">Портфоліо</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             </ul>
-        </nav>
-        <ul>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        </ul>
-    </header>
+        </header>
 
-    <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
-        </section>
-        <ul>
-            <li>
-                <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li>
-                <h2>ПУНКТУАЛЬНІСТЬ</h2>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p> 
-            </li>
-            <li>
-                <h2>ПЛАНУВАННЯ</h2>
-                <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li>
-                <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
-        
-        <figure>
-            <figcaption><h2>Чим ми займаємося</h2></figcaption>
-            <img src="./images/box1.jpg" alt="Кодування за макетом" width="370" height="294">
-            <img src="./images/box2.jpg" alt="Адаптивна WEB-розробка" width="370" height="294">
-            <img src="./images/box3.jpg" alt="Вибір кольору на планшеті" width="370" height="294">
-        </figure>
-
-        <figure>
-            <figcaption><p>Наша команда</p></figcaption>
+        <main>
+            <section>
+                <h1>Ефективні рішення для вашого бізнесу</h1>
+                <button type="button">Замовити послугу</button>
+            </section>
             <ul>
                 <li>
-                    <img src="./images/designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
-
                 <li>
-                    <img src="./images/frontend.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
+                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p> 
                 </li>
-
                 <li>
-                    <img src="./images/marketing.jpg" alt="Микола Тарасов" width="270" height="260">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <h2>ПЛАНУВАННЯ</h2>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
-
                 <li>
-                    <img src="./images/ui-designer.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
-        </figure>
-    </main>
+            
+            <figure>
+                <figcaption><h2>Чим ми займаємося</h2></figcaption>
+                <img src="./images/box1.jpg" alt="Кодування за макетом" width="370" height="294">
+                <img src="./images/box2.jpg" alt="Адаптивна WEB-розробка" width="370" height="294">
+                <img src="./images/box3.jpg" alt="Вибір кольору на планшеті" width="370" height="294">
+            </figure>
 
-    <footer>
-        <a href="#">WebStudio</a>
-        <section>
-            <adress>
-                <p>м. Київ, пр-т Лесі Українки, 26</p>
-                <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-                <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
-            </adress>
-        </section>
-    </footer>
-</body>
+            <figure>
+                <figcaption><p>Наша команда</p></figcaption>
+                <ul>
+                    <li>
+                        <img src="./images/designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                        <h3>Ігор Дем'яненко</h3>
+                        <p>Product Designer</p>
+                    </li>
+
+                    <li>
+                        <img src="./images/frontend.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                        <h3>Ольга Рєпіна</h3>
+                        <p>Frontend Developer</p>
+                    </li>
+
+                    <li>
+                        <img src="./images/marketing.jpg" alt="Микола Тарасов" width="270" height="260">
+                        <h3>Микола Тарасов</h3>
+                        <p>Marketing</p>
+                    </li>
+
+                    <li>
+                        <img src="./images/ui-designer.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                        <h3>Михайло Єрмаков</h3>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </figure>
+        </main>
+        <footer>
+            <a href="#"><span>Web</span>Studio</a>
+                <address>
+                    <ul>
+                        <li>м. Київ, пр-т Лесі Українки, 26</li>
+                        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+        </footer>
+    </body>
 </html>
