--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <a href="#"><span>Web</span>Studio</a>
+            <a href="#" lang="en"><span>Web</span>Studio</a>
             <nav> 
                 <ul>
                     <li><a href="#">Студія</a></li>
@@ -27,63 +27,66 @@
                 <h1>Ефективні рішення для вашого бізнесу</h1>
                 <button type="button">Замовити послугу</button>
             </section>
-            <ul>
-                <li>
-                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p> 
-                </li>
-                <li>
-                    <h2>ПЛАНУВАННЯ</h2>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-            
-            <figure>
-                <figcaption><h2>Чим ми займаємося</h2></figcaption>
-                <img src="./images/box1.jpg" alt="Кодування за макетом" width="370" height="294">
-                <img src="./images/box2.jpg" alt="Адаптивна WEB-розробка" width="370" height="294">
-                <img src="./images/box3.jpg" alt="Вибір кольору на планшеті" width="370" height="294">
-            </figure>
+            <section>
+                <ul>
+                    <li>
+                        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    </li>
+                    <li>
+                        <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p> 
+                    </li>
+                    <li>
+                        <h2>ПЛАНУВАННЯ</h2>
+                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li>
+                        <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Чим ми займаємося</h2>
+                <ul>
+                    <li><img src="./images/box1.jpg" alt="Кодування за макетом" width="370" height="294"></li>
+                    <li><img src="./images/box2.jpg" alt="Адаптивна WEB-розробка" width="370" height="294"></li>
+                    <li><img src="./images/box3.jpg" alt="Вибір кольору на планшеті" width="370" height="294"></li>
+                </ul>
+            </section>
 
-            <figure>
-                <figcaption><p>Наша команда</p></figcaption>
+            <section>
+                <h2>Наша команда</h2>
                 <ul>
                     <li>
                         <img src="./images/designer.jpg" alt="Ігор Дем'яненко" width="270" height="260">
                         <h3>Ігор Дем'яненко</h3>
-                        <p>Product Designer</p>
+                        <p lang="en">Product Designer</p>
                     </li>
 
                     <li>
                         <img src="./images/frontend.jpg" alt="Ольга Рєпіна" width="270" height="260">
                         <h3>Ольга Рєпіна</h3>
-                        <p>Frontend Developer</p>
+                        <p lang="en">Frontend Developer</p>
                     </li>
 
                     <li>
                         <img src="./images/marketing.jpg" alt="Микола Тарасов" width="270" height="260">
                         <h3>Микола Тарасов</h3>
-                        <p>Marketing</p>
+                        <p lang="en">Marketing</p>
                     </li>
 
                     <li>
                         <img src="./images/ui-designer.jpg" alt="Михайло Єрмаков" width="270" height="260">
                         <h3>Михайло Єрмаков</h3>
-                        <p>UI Designer</p>
+                        <p lang="en">UI Designer</p>
                     </li>
                 </ul>
-            </figure>
+            </section>
         </main>
         <footer>
-            <a href="#"><span>Web</span>Studio</a>
+            <a href="#" lang="en"><span>Web</span>Studio</a>
                 <address>
                     <ul>
                         <li>м. Київ, пр-т Лесі Українки, 26</li>
